260706